--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.0"
+    },
+    "require-dev": {
         "illuminate/framework": "5.6.x"
     },
     "autoload": {
