--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "russsiq/laravel-grecaptcha",
-    "description": "Расширение валидатора Laravel 6.* для проверки Google reCAPTCHA v3.",
+    "description": "Расширение валидатора Laravel 6.x для проверки Google reCAPTCHA v3.",
     "homepage": "https://github.com/russsiq/laravel-grecaptcha",
     "type": "library",
     "license": "MIT",
