It will not autoload anymore in Composer v2.0

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require-dev": {},
     "autoload": {
         "psr-4": {
-            "Russsiq\\GRecaptcha\\": "src/app/"
+            "Russsiq\\GRecaptcha\\": "src/"
         }
     },
     "extra": {
