--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,17 @@
         "guzzlehttp/guzzle": "^6.5",
         "illuminate/support": "7.*"
     },
-    "require-dev": {},
+    "require-dev": {
+        "phpunit/phpunit": "^9.2"
+    },
     "autoload": {
         "psr-4": {
             "Russsiq\\GRecaptcha\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "extra": {
@@ -31,6 +38,24 @@
             "aliases": {
                 "GRecaptcha": "Russsiq\\GRecaptcha\\Facades\\GRecaptcha"
             }
+        }
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ],
+        "test-win7": [
+            "vendor\\bin\\phpunit"
+        ],
+        "testdox": [
+            "vendor\\bin\\phpunit --testdox-html tests/testdox.html"
+        ]
+    },
+    "config": {
+        "prestissimo": {
+            "maxConnections": 10,
+            "minConnections": 3,
+			"pipeline": true
         }
     },
     "minimum-stability": "dev",
