--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
         "role": "Developer"
     }],
     "require": {
-        "php": ">=7.3.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "illuminate/support": "7.*"
+        "php": "^7.3|^8.0",
+        "guzzlehttp/guzzle": "^7.0",
+        "illuminate/support": "8.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
