--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/support": "8.*"
     },
