--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "russsiq/laravel-grecaptcha",
-    "description": "Расширение валидатора Laravel 8.x для проверки Google reCAPTCHA v3.",
+    "description": "Расширение валидатора Laravel 9.x для проверки Google reCAPTCHA v3.",
     "keywords": ["laravel", "google recaptcha"],
     "homepage": "https://github.com/russsiq/laravel-grecaptcha",
     "type": "library",
@@ -13,12 +13,12 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^8.0",
-        "guzzlehttp/guzzle": "^7.2",
-        "illuminate/support": "8.*"
+        "php": "8.1.*",
+        "guzzlehttp/guzzle": "^7.4.2",
+        "illuminate/support": "9.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5.20"
     },
     "autoload": {
         "psr-4": {
@@ -41,22 +41,8 @@
         }
     },
     "scripts": {
-        "test": [
-            "vendor/bin/phpunit"
-        ],
-        "test-win": [
-            "vendor\\bin\\phpunit"
-        ],
-        "testdox": [
-            "vendor\\bin\\phpunit --testdox-html tests/testdox.html"
-        ]
-    },
-    "config": {
-        "prestissimo": {
-            "maxConnections": 10,
-            "minConnections": 3,
-            "pipeline": true
-        }
+        "test": "vendor/bin/phpunit",
+        "testdox": "vendor/bin/phpunit --testdox-html tests/testdox.html"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
